# graphic-tool

./: .gitignore  README.md
server/: CMakeLists.txt  main.cpp
web/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.vue  koneko  main.ts
web/src/stores/: api.ts  counter.ts  router.ts
web/src/views/: index.vue
web/src/views/components/: menu-node.vue
web/src/views/server/: index.vue
web/src/views/server/graphic/: canvas.vue
web/src/views/server/system/: config.vue
web/src/views/server/system/preview/: base.vue  display.vue  feedback.vue  layout.vue  navigation.vue
